start phase 4 implementation   * make application responsive without using external package   * add a loading indicator in suggested screen adding and integrate logic for ads later

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -7,6 +7,7 @@
   "addCoursesDescription": "[+] أضف جميع المواد المتاحة لك هذا الفصل. سنجد لك أفضل التركيبات.",
   "addNewCourse": "[+] إضافة مادة جديدة",
   "generateSchedulesWithoutNumber": "إنشاء الجداول",
+  "generatingScheduleSuggestions": " جاري تحميل الجداول المقترحه ",
   "generateSchedules": "إنشاء الجداول ({count})",
   "@generateSchedules": {
     "placeholders": {
